css/style.css
:root {
    --background: black;
    --main-col: #f7a200;
    --secondary-col: red;
    --text-col: white;
    --button-text-col: rgb(51, 42, 42);
    --button-hov-col: #ffcc00;
    --timeline-col: #222;
    --link-background: #e0e0e0;
    --link-clicked-background: #979393;
    --header-background: #19191a;
}

* {
    box-sizing: border-box;
}

html, body {
    min-height: 100vh;
    margin: 0;
    justify-content: center;
    background-color: var(--background);
    font-family: "Press Start 2P", sans-serif;
}

.normal-link {
    color: var(--timeline-col);
    text-decoration: none;
    font-size: 14px;
    padding: 10px 20px;
    background-color: var(--link-background);
    border-radius: 8px;
    transition: all 0.2s ease;
    position: relative;
}

.normal-link:hover {
    color: var(--secondary-col);
    font-size: 16px;
    text-decoration: underline;
}

.normal-link:active {
    background-color: var(--link-clicked-background);
    color: var(--button-hov-col);
}

.normal-link:hover::after {
    content: "External Link";
    position: absolute;
    bottom: 110%;
    left: 0;
    background-color: var(--main-col);
    color: var(--timeline-col);
    padding: 10px 10px;
    border-radius: 8px;
    font-size: 8px;
    visibility: visible;
}

img {
    max-width: 100%;
    height: auto;
    border-radius: 8px;
}

h1{
    padding-top: 80px;
}

section {
    color: white;
    min-height: 100vh;
    display: flex;
    justify-content: center;
    text-align: center;
    padding: 20px;
}

footer {
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: var(--header-background);
    border-top: 2px dotted var(--secondary-col);
    margin-top: 20px;
    color: var(--text-col);
}

footer p {
    font-family: "Press Start 2P", sans-serif;
    margin-bottom: 10px;
}

.source-link {
    font-size: 12px;
    color: var(--text-col);
    text-decoration: none;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

.source-link:hover {
    text-decoration: underline;
}

.sources {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
    gap: 20px;
    line-height: 6px;
    margin-bottom: 20px;
    margin-top:10px;
}

p {
    font-size: 16px;
    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

button {
    background-color: var(--main-col);
    border: 4px solid var(--secondary-col); 
    color: var(--button-text-col);
    padding: 15px 30px;
    font-size: 20px;
    font-family: "Press Start 2P", sans-serif;
    letter-spacing: 5px;
    cursor: pointer;
    transition: all 0.2s ease;
    margin-top: 0px;
}

button:hover, button:active {
    transform: scale(1.1); 
    font-size: 26px;
    box-shadow: 0px 0px 15px rgba(255, 0, 0, 1), 0px 0px 30px rgba(255, 0, 0, 0.6);
    background-color: var(--button-hov-col); 
    color: var(--background)
}

/*Header Section*/

header h1{
    padding-left: 40px;
    padding-top: 10px;
    padding-bottom: 10px;
    margin-top: 0;
    margin-bottom: 0;
}

header{
    left: 0;
    right: 100vw;
    top: 0;
    bottom: 0; /*not sure why this is needed but thats what allowed it to be sticky */
    position: sticky;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    background-color: var(--header-background);
    border-bottom: 2px dotted var(--secondary-col);
    z-index: 100;
    padding-right: 40px;
}

.header-button, .header-button-logo {
    background-color: var(--header-background);
    border: 0px; 
    color: var(--text-col);
    padding: 15px 30px;
    font-size: 12px;
    font-family: "Press Start 2P", sans-serif;
    letter-spacing: 5px;
    cursor: pointer;
    transition: all 0.2s ease;
}

.header-button:hover, .header-button:active, .header-button-logo:hover, .header-button-logo:active {
    transform: scale(1.001); 
    font-size: 16px;
    box-shadow: 0px 0px 15px rgba(255, 0, 0, 1), 0px 0px 30px rgba(255, 0, 0, 0.6);
    background-color: var(--button-hov-col); 
    color: var(--timeline-col);
}

.arcade-title-logo {
    font-size: 12px;
    color: var(--secondary-col);
    letter-spacing: 8px;
    text-shadow: var(--main-col) 1px 2px, var(--main-col) 1px 0 6px;
    line-height: 18px;
    
}

/*Video/Landing page Section */

.video-landing {
    width: 100%;
    height: 100vh;
}

.video-wrapper {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: 100%;
}

#background-video {
    width: 100%;
    height: 100%;
    object-fit: contain;
}

.video-text {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 0px;
}

.video-text p {
    font-size: 16px;
    color: var(--text-col);
}

.video-text button {
    margin-top: 100px;
}

.arcade-title {
    font-size: 32px;
    color: var(--main-col);
    letter-spacing: 12px;
    text-shadow: red 3px 5px, #FC0 1px 0 6px;
    line-height: 45px;
}

/*Timeline Section*/

.timeline{
    position: relative;
    max-width: 900px;
    margin: 0 auto;
    padding: 50px 20px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.timeline::after {
    content: '';
    position: absolute;
    width: 4px;
    background-color: var(--secondary-col);
    top: 0;
    bottom: 0;
    left: 50%;
}

.tl-left, .tl-right {
    max-width: 900px;
    width: 50%;
    padding: 10px 20px;
    margin-top: 25px;
}

.tl-left {
    text-align: right;
    align-self: flex-end;
}

.tl-right {
    text-align: left;
    align-self: flex-start;
}

.tl-content {
    background-color: var(--timeline-col);
    border: 2px dotted var(--secondary-col);
    border-radius: 8px;
    padding: 30px;
}

.tl-content img{
    margin-top: 20px;
}

.grid-section {
    display: flex;
    flex-direction: column;
    align-items: center;
    
}

.grid {
    padding: 50px 20px;
    display: grid;
    grid-template-columns: 1fr 1fr;
    width: 80%;
    row-gap: 40px;
    column-gap: 40px;
    max-width: 840px;
    border: 4px solid var(--secondary-col);
    margin-bottom: 40px;
}

.item-left, .item-right , .item-top, .item-bottom {
    background-color: var(--timeline-col);
    border: 2px dotted var(--secondary-col);
    border-radius: 8px;
    padding: 30px;
    
    width: 100%;
}
.item-left {
    grid-row: span 2;
    text-align: left;
}

.item-right {
    text-align: right;
}

.l {
    text-align: left;
}

.item-top {
    grid-column: span 2;
    text-align: left;
}

.item-left img, .item-right img {
    margin-top: 20px;
}

.quote p{
    font-style: italic;
    
}

.classics {
    display: flex;
    flex-direction: column;
    gap: 20px;
    align-items: center;
}

.classics a{
    width: 70%;
    font-size: 18px;
}

@media screen and (max-width: 950px) {
    img {
        max-width: 100%;
    }
    
    .header-button {
        width: 18px; 
        height: 20px;
        margin: 20px 30px;
        font-size: 0; 
        border-radius: 100%; 
        background-color: var(--text-col);
        opacity: 40%;
        padding-left: 0;
    }
    
    .header-button:hover, .header-button:active {
        font-size: 0;
        box-shadow: 0px 0px 15px rgba(255, 0, 0, 1), 0px 0px 30px rgba(255, 0, 0, 0.6);
        background-color: var(--button-hov-col); 
        color: var(--timeline-col);
        opacity: 100%;
    }
    
    .arcade-title-logo {
        font-size: 12px;
        color: var(--secondary-col);
        letter-spacing: 8px;
        text-shadow: var(--main-col) 1px 2px, var(--main-col) 1px 0 6px;
        line-height: 18px;
    }


    .arcade-title {
        font-size: 18px;
        color: var(--main-col);
        letter-spacing: 4x;
        text-shadow: red 3px 5px, #FC0 1px 0 6px;
        line-height: 45px;
    }

    .video-text p {
        font-size: 12px;
        color: var(--text-col);
    }

    .tl-left, .tl-right {
        text-align: center;
    
    }
    .tl-left, .tl-right {
        width: 100%;
    }

    .timeline {
        margin-left: ;
    }

    .timeline::after {
        left: 0;
    }

    .grid {
        padding: 50px 20px;
        display: grid;
        grid-template-columns: 1fr;
        width: 100%;
        row-gap: 40px;
        column-gap: 40px;
        max-width: 840px;
        border: none;
        border-left: 4px solid var(--secondary-col);
        
    }

    .item-left, .item-right, .item-bottom, .item-top{
        padding: 20px;
        text-align: center;
    }

    .item-left {
        grid-row: span 1;
    }
    
    .item-top {
        grid-column: span 1;
    }

    .img-item img {
        max-width: 200px;
    }

    .sources {
        grid-template-columns: 1fr 1fr 1fr;
    }
}

